Modified recommender system

--- a/Models/db_download.ipynb
+++ b/Models/db_download.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "cddd4934-8ae2-4c99-9112-2c8bdaadf714",
    "metadata": {},
    "outputs": [],
@@ -14,11 +14,11 @@
     "conn = sqlite3.connect('viivi.db')\n",
     "\n",
     "# Query the user_behaviour table with pandas\n",
-    "query = \"SELECT * FROM order_items\"\n",
+    "query = \"SELECT * FROM categories\"\n",
     "df = pd.read_sql_query(query, conn)\n",
     "\n",
     "# Export to CSV with headers\n",
-    "df.to_csv('order_items.csv', index=False)\n",
+    "df.to_csv('categories.csv', index=False)\n",
     "\n",
     "# Close the database connection\n",
     "conn.close()\n"
